<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_pacote_imagem"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/sao_paulo_sp"
        android:contentDescription="@string/imagem_do_pacote"
    />

    <TextView
        android:id="@+id/resumo_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_imagem"
        tools:text="@string/s_o_paulo"
    />

    <TextView
        android:id="@+id/resumo_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_local"
        tools:text="@string/_2_dias"
    />

    <TextView
        android:id="@+id/resumo_pacote_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/resumo_pacote_preco"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_dias"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_dias"
        tools:text="08/12 - 10/12 de 2020"
    />

    <TextView
        android:id="@+id/resumo_pacote_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resumo_pacote_data"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_pacote_data"
        tools:text="R$ 243,99"
    />

    <TextView
        android:id="@+id/resumo_pacote_preco_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_final"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_preco"
        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_preco"
        tools:text="Preço final:"
    />

    <Button
        android:id="@+id/resumo_pacote_button_realiza_pagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_redondo_laranja"
        android:text="@string/realizar_pagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
    />

    <fragment
        android:id="@+id/fragment"
        android:name="ayslla.gomes.viagens.Map"
        android:layout_width="281dp"
        android:layout_height="234dp"
        android:layout_margin="8dp"
        android:layout_marginTop="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        tools:ignore="MissingConstraints"
        tools:layout="@layout/fragment_map"
    />

    <TextView
        android:id="@+id/local_partida"
        android:layout_width="281dp"
        android:layout_height="33dp"
        android:layout_margin="8dp"
        android:background="#FFFFFF"
        android:text="@string/local_de_partida"
        android:textColor="#F2514F5E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
    />

</androidx.constraintlayout.widget.ConstraintLayout>